--- a/Advanced-Flask-Lab/templates/index.html
+++ b/Advanced-Flask-Lab/templates/index.html
@@ -13,7 +13,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<span class="avatar"><img src="{{url_for('static',filename='images/avatar.jpg')}}" alt="" /></span>
+						<span class="avatar"><img src='static/images/avatar.jpg' alt="" /></span>
 
             <h1>Description</h1>
             <br>
@@ -33,26 +33,57 @@
 				<!-- Main -->
 					<section id="main">
 
+						<p> {% for i in posts %}
+
+							<img src='{{i}}' style="width: 50%; height: 50%;" />
+							<h3>{{posts[i]}}/</h3><br/>
+
+						{% endfor %} </p>
+
 						<!-- Thumbnails -->
 							<section class="thumbnails">
                 
                 <div>
                       <a href="">
-                        <img src="static/images/thumbs/01.jpg" alt="" />
-                        <h3>Caption... blah blah blah</h3>
+                        <img src="{{image_link}}" alt="" />
+                        <h3> {{user_bio}}</h3>
                       </a>
                 
                       <a href="">
-                        <img src="url_for('static',filename='images/thumbs/02.jpg')" alt="" />
-                        <h3>Caption... blah blah blah</h3>
+                        <img src="static/images/thumbs/02.jpg" alt="" />
+                        <h3>Cool Pic #2</h3>
                       </a>
                 </div>    
                 <div>
                   <a href="">
-                        <img src="{{url_for('static',filename='images/thumbs/03.jpg')}}" alt="" />
-                        <h3>Caption... blah blah blah</h3>
+                        <img src="static/images/thumbs/03.jpg" alt="" />
+                        <h3>Cool Pic #3</h3>
                       </a>
-                </div>  
+                </div> 
+                <div>
+                  <a href="">
+                        <img src="static/images/thumbs/04.jpg" alt="" />
+                        <h3>Cool Pic #4</h3>
+                      </a>
+                </div> 
+                <div>
+                  <a href="">
+                        <img src="static/images/thumbs/05.jpg" alt="" />
+                        <h3>Cool Pic #5</h3>
+                      </a>
+                </div> 
+                <div>
+                  <a href="">
+                        <img src="static/images/thumbs/06.jpg" alt="" />
+                        <h3>Cool Pic #6</h3>
+                      </a>
+                </div> 
+                <div>
+                  <a href="">
+                        <img src="static/images/thumbs/07.jpg" alt="" />
+                        <h3>Cool Pic #7</h3>
+                      </a>
+                </div>      
 
 							</section>
 
